# 100-exercises-to-learn-rust

./: Cargo.toml
book/src/04_traits/: 10_clone.md  11_copy.md
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/03_modules/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/03_operator_overloading/src/: lib.rs
exercises/04_traits/07_sized/src/: lib.rs
exercises/04_traits/08_from/src/: lib.rs
exercises/04_traits/09_assoc_vs_generic/src/: lib.rs
exercises/04_traits/10_clone/src/: lib.rs
exercises/04_traits/11_copy/src/: lib.rs
exercises/04_traits/12_drop/src/: lib.rs
exercises/04_traits/13_outro/src/: lib.rs
exercises/05_ticket_v2/01_enum/src/: lib.rs
exercises/05_ticket_v2/03_variants_with_data/src/: lib.rs
exercises/05_ticket_v2/04_if_let/src/: lib.rs
exercises/05_ticket_v2/05_nullability/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/08_error_enums/src/: lib.rs
exercises/08_futures/08_outro/: Cargo.toml
exercises/08_futures/08_outro/src/: data.rs  lib.rs  main.rs  store.rs
helpers/ticket_fields/: Cargo.toml
helpers/ticket_fields/src/: description.rs  title.rs
(+36 files in other folders)
